--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Scanner CPF/CNPJ - Versão Final",
-  "short_name": "Scanner CPF",
-  "description": "Scanner de documentos CPF/CNPJ com OCR real",
+  "name": "Scanner CPF/CNPJ - Otimizado",
+  "short_name": "Scanner OCR+",
+  "description": "Scanner otimizado para documentos oficiais brasileiros",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#667eea",
